# ffmpeg-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml
src/: app.py  main.py
src/core/: ffmpeg_downloader.py  ffmpeg_manager.py  language.py  presets.py  task_queue.py
src/ui/: install_dialog.py  main_window.py  theme.py
src/ui/tabs/: batch_tab.py  convert_tab.py  extract_tab.py  info_tab.py  merge_tab.py  settings_tab.py  trim_tab.py
tests/: test_ffmpeg_manager.py  test_task_queue.py
