[project]
name = "ffmpeg-gui"
version = "0.2.0"
description = "FFmpeg GUI Client - 基于 FFmpeg 的本地视频处理桌面工具"
authors = [{ name = "LFZ" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
